--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "ngx-cookie-service": "^17.1.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
